Header + mobile menu + js + кнопка переключения фона

--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -13,3 +13,8 @@ $color-pararaph-text-night: #E6E6E6
 /*меню бургер*/ 
 $color-border-day: #151515
 $color-border-night: #F4F4F4
+
+/*кнопка переключения фона*/ 
+$btn-switch-background-day: #fff
+$btn-switch-background-night: #545454
+$btn-circle: #24B47E
