--- a/sass/blocks/header/_header.sass
+++ b/sass/blocks/header/_header.sass
@@ -44,4 +44,6 @@
       display: none
     &__line
       width: 100%
-      border: 2px solid $color-border-day
+      height: 2px
+      border: 1px solid $color-border-day
+      background-color: $color-border-day
