--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 /*цвет текста шапки*/
 /*цвет текста параграфа*/
 /*меню бургер*/
+/*кнопка переключения фона*/
 /* подключение normalize */
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
@@ -355,7 +356,23 @@ template {
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("./Inter/Inter-Regular.woff2?v=3.19") format("woff2"), url("./Inter/Inter-Regular.woff?v=3.19") format("woff");
+  src: url("../fonts/Inter/Inter-Regular.woff2") format("woff2"), url("../fonts/Inter/Inter-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url("../fonts/Inter/Inter-Medium.woff2") format("woff2"), url("../fonts/Inter/Inter-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+  src: url("../fonts/Inter/Inter-SemiBold.woff2") format("woff2"), url("../fonts/Inter/Inter-SemiBold.woff") format("woff");
 }
 
 @font-face {
@@ -363,15 +380,7 @@ template {
   font-style: normal;
   font-weight: 700;
   font-display: swap;
-  src: url("./Inter/Inter-Bold.woff2?v=3.19") format("woff2"), url("./Inter/Inter-Bold.woff?v=3.19") format("woff");
-}
-
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 900;
-  font-display: swap;
-  src: url("./Inter/Inter-Black.woff2?v=3.19") format("woff2"), url("./Inter/Inter-Black.woff?v=3.19") format("woff");
+  src: url("../fonts/Inter/Inter-Bold.woff2") format("woff2"), url("../fonts/Inter/Inter-Bold.woff") format("woff");
 }
 
 /* подключение настройки для всей страницы */
@@ -466,7 +475,9 @@ template {
 
 .menu-button__line {
   width: 100%;
-  border: 2px solid #151515;
+  height: 2px;
+  border: 1px solid #151515;
+  background-color: #151515;
 }
 
 /* подключение контейнера для меню на моб. устройствах */
@@ -478,14 +489,16 @@ template {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
   width: 100%;
   height: 100%;
+  margin: 0;
+  padding: 0;
   background-color: #F4F4F4;
   position: fixed;
   top: 0;
@@ -493,8 +506,6 @@ template {
   right: 0;
   bottom: 0;
   z-index: 101;
-  margin: 0;
-  padding: 0;
   opacity: 0;
   visibility: hidden;
 }
@@ -511,35 +522,122 @@ template {
   top: 20px;
   right: 20px;
   z-index: 102;
-  background-image: url("../../images/close.svg");
+  background-image: url("../images/icons/close.svg");
   border: 0;
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.container__items {
+.container-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.container-menu__items {
   list-style-type: none;
   margin: 0;
   padding: 70px 0 0 0;
 }
 
-.container__item {
+.container-menu__item {
   padding: 0;
   margin: 0 0 32px 0;
 }
 
-.container__items:last-child {
+.container-menu__items:last-child {
   margin-bottom: 0;
 }
 
-.container__link {
+.container-menu__link {
   text-decoration: none;
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 18px;
   color: #151515;
+}
+
+.container-footer {
+  width: 100%;
+  margin: 0 0 38px 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container-footer__sun {
+  width: 28px;
+  height: 28px;
+  padding: 0;
+  margin: 0 22px 0 0;
+}
+
+.container-footer__btn {
+  display: inline-block;
+  width: 44px;
+  height: 24px;
+  padding: 0;
+  margin: 0 22px 0 0;
+  background-color: #fff;
+  border-radius: 17px;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+}
+
+.container-footer__btn::after {
+  content: "";
+  width: 20px;
+  height: 20px;
+  background: #24B47E;
+  border-radius: 17px;
+  top: 2px;
+  left: 2px;
+  -webkit-transition-duration: 300ms;
+          transition-duration: 300ms;
+  position: absolute;
+  z-index: 1;
+}
+
+.container-footer__btn_on {
+  background-color: #545454;
+}
+
+.container-footer__btn_on::after {
+  left: 22px;
+}
+
+.container-footer__moon {
+  width: 20px;
+  height: 20px;
+  -o-object-fit: fill;
+     object-fit: fill;
+  -o-object-position: center;
+     object-position: center;
+  padding: 0;
+  margin: 0;
 }
 
 /* подключение футера */
