--- a/sass/blocks/container/_container.sass
+++ b/sass/blocks/container/_container.sass
@@ -1,20 +1,20 @@
 .container
   display: flex
   flex-direction: column
+  justify-content: space-between
   align-items: center
-  justify-content: flex-start
   width: 100%
   height: 100%
-  background-color: $color-background-day
+  margin: 0
+  padding: 0
   // background-color: tomato
+  background-color: $color-background-day
   position: fixed
   top: 0
   left: 0
   right: 0
   bottom: 0
   z-index: 101
-  margin: 0
-  padding: 0
   opacity: 0
   visibility: hidden
   &_opened
@@ -27,24 +27,79 @@
     top: 20px
     right: 20px
     z-index: 102
-    background-image: url("../../images/close.svg")
+    background-image: url("../images/icons/close.svg")
     border: 0
     background-color: transparent
     background-repeat: no-repeat
     background-position: center
-  &__items
-    list-style-type: none
+  &-menu
+    display: flex
+    flex-direction: column
+    align-items: center
+    justify-content: flex-start
+    width: 100%
     margin: 0
-    padding: 70px 0 0 0
-  &__item
     padding: 0
-    margin: 0 0 32px 0
-  &__items:last-child
-    margin-bottom: 0
-  &__link
-    text-decoration: none
-    font-style: normal
-    font-weight: 500
-    font-size: 18px
-    line-height: 18px
-    color: $color-header-text-day
+    &__items
+      list-style-type: none
+      margin: 0
+      padding: 70px 0 0 0
+    &__item
+      padding: 0
+      margin: 0 0 32px 0
+    &__items:last-child
+      margin-bottom: 0
+    &__link
+      text-decoration: none
+      font-style: normal
+      font-weight: 500
+      font-size: 18px
+      line-height: 18px
+      color: $color-header-text-day
+  &-footer
+    width: 100%
+    margin: 0 0 38px 0
+    padding: 0
+    display: flex
+    justify-content: center
+    &__sun
+      width: 28px
+      height: 28px
+      padding: 0
+      margin: 0 22px 0 0
+    &__btn
+      display: inline-block
+      width: 44px
+      height: 24px
+      padding: 0
+      margin: 0 22px 0 0
+      background-color: $btn-switch-background-day
+      border-radius: 17px
+      border: none
+      cursor: pointer
+      position: relative
+      z-index: 0
+      transition-duration: 300ms
+    &__btn::after
+      content: ""
+      width: 20px
+      height: 20px
+      background: $btn-circle
+      border-radius: 17px
+      top: 2px
+      left: 2px
+      transition-duration: 300ms
+      position: absolute
+      z-index: 1
+    &__btn
+      &_on
+        background-color: $btn-switch-background-night
+      &_on::after
+        left: 22px
+    &__moon
+      width: 20px
+      height: 20px
+      object-fit: fill
+      object-position: center
+      padding: 0
+      margin: 0
