Header, mobile menu, js, правки

--- a/sass/blocks/container/_container.sass
+++ b/sass/blocks/container/_container.sass
@@ -43,7 +43,7 @@
     margin: 0 auto
     padding: 0
     &__items
-      w100%
+      width: 100%
       list-style-type: none
       margin: 0
       padding: 70px 0 0 0
