--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,20 +1,28 @@
-/*цвет фона*/ 
+/* цвет фона */ 
 $color-background-day: #F4F4F4
 $color-background-night: #333333
+$color-background: #D7D4D4
 
-/*цвет текста шапки*/ 
+/* цвет текста шапки */ 
 $color-header-text-day: #151515
 $color-header-text-night: #fff
 
-/*цвет текста параграфа*/ 
+/* цвет текста заголовка */
+$color-title-text-day: #151515
+$color-title-text-night: #fff
+
+/* цвет текста параграфа */ 
 $color-pararaph-text-day: #222222
 $color-pararaph-text-night: #E6E6E6
 
-/*меню бургер*/ 
+/* меню бургер */ 
 $color-border-day: #151515
 $color-border-night: #F4F4F4
 
-/*кнопка переключения фона*/ 
+/* кнопка переключения фона */ 
 $btn-switch-background-day: #fff
 $btn-switch-background-night: #545454
+$btn-text-day: #fff
 $btn-circle: #24B47E
+
+/*  */ 
