--- a/sass/blocks/header/_header.sass
+++ b/sass/blocks/header/_header.sass
@@ -3,6 +3,8 @@
   padding: 28px 120px 28px 0px
   margin: 0 auto
   position: sticky
+  top: 0
+  background-color: $color-background-day
   z-index: 99
   display: flex
   justify-content: flex-end
