--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,6 +18,9 @@
 /* подключение контейнера для меню на моб. устройствах */  
 @import '../sass/blocks/container/_container'
 
+/* секция Шоссе, ТТ и Грэвел */
+@import '../sass/blocks/typestart/_typestart'
+
 /* подключение футера */ 
 @import '../sass/blocks/footer/_footer'
 
