feat: Добавлен блок: Цитата - 'Катайся много или мало...'

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -21,6 +21,9 @@
 /* секция Шоссе, ТТ и Грэвел */
 @import '../sass/blocks/typestart/_typestart'
 
+/* секция цитата - катайся много или мало */ 
+@import '../sass/blocks/quote/_quote'
+
 /* подключение футера */ 
 @import '../sass/blocks/footer/_footer'
 
