--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -22,7 +22,11 @@ $color-border-night: #F4F4F4
 /* кнопка переключения фона */ 
 $btn-switch-background-day: #fff
 $btn-switch-background-night: #545454
+$btn-background-day: #EBEBEB
+$btn-background-night: #434343
 $btn-text-day: #fff
 $btn-circle: #24B47E
 
-/*  */ 
+/* цвет ссылок  */ 
+$color-link-day: #222222
+$color-linkselected-day: #151515
