--- a/sass/blocks/typestart/_typestart.sass
+++ b/sass/blocks/typestart/_typestart.sass
@@ -96,7 +96,9 @@
       padding: 20px 50px
       margin: 0
       background-color: $color-background-day
-      box-shadow: -20px 60px 220px rgba(0, 0, 0, 0.44)
+      object-fit: cover
+      object-position: center
+      filter: drop-shadow(-20px 60px 220px rgba(0, 0, 0, 0.2))
       border-radius: 20px
       position: sticky
       top: 347px
