--- a/sass/style.sass
+++ b/sass/style.sass
@@ -24,6 +24,12 @@
 /* секция цитата - катайся много или мало */ 
 @import '../sass/blocks/quote/_quote'
 
+/* секция Дороги */
+@import '../sass/blocks/road/_road'
+
+/* секция Велосипеды */
+@import '../sass/blocks/bike/_bike'
+
 /* подключение футера */ 
 @import '../sass/blocks/footer/_footer'
 
