--- a/sass/style.sass
+++ b/sass/style.sass
@@ -30,6 +30,9 @@
 /* секция Велосипеды */
 @import '../sass/blocks/bike/_bike'
 
+/* секция Тренировки */ 
+@import '../sass/blocks/traning/_traning'
+
 /* подключение футера */ 
 @import '../sass/blocks/footer/_footer'
 
