--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -30,3 +30,9 @@ $btn-circle: #24B47E
 /* цвет ссылок  */ 
 $color-link-day: #222222
 $color-linkselected-day: #151515
+
+/* цвет фона */
+$color-page-bgc-night: #333333
+$color-footer-bgc-night: #2f2f2f
+$color-footer-bgc-day: #EFEFEF
+$color-footer-copyright: #CFCFCF
