--- a/sass/blocks/footer/_footer.sass
+++ b/sass/blocks/footer/_footer.sass
@@ -1,3 +1,84 @@
 .footer
+  box-sizing: border-box
+  width: 100%
   margin: 0
-  padding: 0
+  padding: 80px 120px 60px
+  min-height: 424px
+  background-color: $color-footer-bgc-day
+  &__title
+    padding: 0
+    margin: 0 0 50px 0
+    width: 229px
+    font-style: normal
+    font-weight: 600
+    font-size: 24px
+    line-height: 32px
+    color: $color-title-text-day
+  &__input
+    box-sizing: border-box
+    width: 360px
+    height: 50px
+    border: 1px solid rgba(199, 199, 199, 0.5)
+    border-radius: 4px
+    background-color: $color-footer-bgc-day
+    padding: 11px 20px
+    margin: 0 0 100px 0
+  &__wrapper
+    padding: 0
+    margin: 0
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+  &__copyright
+    font-style: normal
+    font-weight: 600
+    font-size: 14px
+    line-height: 20px
+    color: $color-footer-copyright
+    margin: 0
+    padding: 0
+  &__container
+    display: flex
+    align-items: center
+    &-sun
+      width: 28px
+      height: 28px
+      padding: 0
+      margin: 0 22px 0 0
+    &-btn
+      display: inline-block
+      width: 44px
+      height: 24px
+      padding: 0
+      margin: 0 22px 0 0
+      background-color: $btn-switch-background-day
+      border-radius: 17px
+      border: none
+      cursor: pointer
+      position: relative
+      z-index: 0
+      transition-duration: 300ms
+    &-btn::after
+      content: ""
+      width: 20px
+      height: 20px
+      background: $btn-circle
+      border-radius: 17px
+      top: 2px
+      left: 2px
+      transition-duration: 300ms
+      position: absolute
+      z-index: 1
+    &-btn
+      &_on
+        background-color: $btn-switch-background-night
+      &_on::after
+        left: 22px
+    &-moon
+      width: 20px
+      height: 20px
+      object-fit: fill
+      object-position: center
+      padding: 0
+      margin: 0
