--- a/sass/blocks/footer/_footer.sass
+++ b/sass/blocks/footer/_footer.sass
@@ -21,6 +21,7 @@
     border: 1px solid rgba(199, 199, 199, 0.5)
     border-radius: 4px
     background-color: $color-footer-bgc-day
+    cursor: pointer
     padding: 11px 20px
     margin: 0 0 100px 0
   &__wrapper
