--- a/sass/blocks/road/_road.sass
+++ b/sass/blocks/road/_road.sass
@@ -46,6 +46,9 @@
     &-svg
       margin: 0
       padding: 12px 34px 12px 16px
+    &-svggrevel
+      margin: 0
+      padding: 23px 34px 12px 16px
   &__buttons
     display: flex
     justify-content: flex-start
