feat: рефактринг формы футера, медиазапросы + js на форму отправки

--- a/sass/_variables.sass
+++ b/sass/_variables.sass
@@ -1,7 +1,7 @@
 /* цвет фона */ 
-$color-background-day: #F4F4F4
+$color-background-day: #f4f4f4
 $color-background-night: #333333
-$color-background: #D7D4D4
+$color-background: #d7d4d4
 
 /* цвет текста шапки */ 
 $color-header-text-day: #151515
@@ -13,7 +13,7 @@ $color-title-text-night: #fff
 
 /* цвет текста параграфа */ 
 $color-pararaph-text-day: #222222
-$color-pararaph-text-night: #E6E6E6
+$color-pararaph-text-night: #e6e6e6
 
 /* меню бургер */ 
 $color-border-day: #151515
@@ -22,10 +22,10 @@ $color-border-night: #F4F4F4
 /* кнопка переключения фона */ 
 $btn-switch-background-day: #fff
 $btn-switch-background-night: #545454
-$btn-background-day: #EBEBEB
+$btn-background-day: #ebebeb
 $btn-background-night: #434343
 $btn-text-day: #fff
-$btn-circle: #24B47E
+$btn-circle: #24b47e
 
 /* цвет ссылок  */ 
 $color-link-day: #222222
@@ -34,5 +34,12 @@ $color-linkselected-day: #151515
 /* цвет фона */
 $color-page-bgc-night: #333333
 $color-footer-bgc-night: #2f2f2f
-$color-footer-bgc-day: #EFEFEF
-$color-footer-copyright: #CFCFCF
+$color-footer-bgc-day: #efefef
+$color-footer-copyright: #cfcfcf
+
+/* цвет фона точек */
+$color-dot-active-day: #151515
+$color-dot-noactive-day: #CACACA
+
+/* цвет декоративной линии*/
+$color-decorative-line-day: #e3e3e3
