--- a/sass/blocks/quote/_quote.sass
+++ b/sass/blocks/quote/_quote.sass
@@ -5,17 +5,24 @@
   margin: 0 auto
   display: flex
   justify-content: space-between
+  &__diagonal-line
+    display: none
   &__foto
-    width: 650px
-    min-height: 460px
+    width: 56%
+    height: auto
+    min-width: 284px
+    min-height: 204px
     object-fit: cover
     object-position: center
+    margin: 0
+    padding: 0
   &__info
     display: flex
     flex-direction: column
     justify-content: space-between
     align-items: flex-start
-    width: 470px
+    width: 40.48%
+    min-width: 284px
     padding: 0
     margin: 0 0 0 80px
     &-text
