--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,13 +1,16 @@
 /* Здесь собираем стили */
 
-/* подключение переменных */  
-@import '../sass/_variables'
-
 /* подключение normalize */ 
 @import '../vendor/_normalize'
 
 /* подключение шрифтов */ 
 @import '../fonts/_fonts'
+
+/* подключение переменных */  
+@import '../sass/_variables'
+
+/* подключение миксинов*/
+@import '../sass/_mixin'
 
 /* подключение настройки для всей страницы */ 
 @import '../sass/blocks/page/_page'
