--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,4 +1,117 @@
-@media (max-width:530px)
+@media(max-width: 1400px)
+  .typestart
+    &__title
+      width: 380px
+      padding: 40px 0 0 120px
+    &-container
+      &__foto-bike
+        width: 320px
+        height: 240px
+  .bike
+    &__system
+      &-foto
+        width: 95%
+        height: auto
+
+@media(max-width: 1200px)
+  .typestart
+    &-container
+      &__title
+        width: 100%
+        font-size: 50px
+        line-height: 55px
+      &__limiter
+        height: 380px
+      &__foto-bike
+        width: 300px
+        height: 220px
+    &-info
+      width: 30%
+      padding: 0 0 100px 120px
+      &__link
+        margin: 0 0 120px 0
+  .quote
+    &__info
+      &-text
+        font-size: 28px
+        line-height: 38px
+  .road
+    &__paragraph
+      width: 48.5%
+
+@media(max-width: 1024px)
+  .typestart
+    &__title
+      font-size: 50px
+      line-height: 55px
+    &-container
+      &__limiter
+        width: 128%
+        height: 240px
+      &__foto-bike
+        width: 280px
+        height: 200px
+    &-info
+      &__paragraph
+        font-size: 16px
+        line-height: 26px
+  .quote
+    &__info
+      &-text
+        font-size: 24px
+        line-height: 34px
+  .bike
+    &__name
+      &-title
+        font-size: 45px
+        line-height: 50px
+    &__system
+      &-foto
+        margin: 0 15px 22px 0
+  .training
+    padding: 100px 120px 60px
+    &__title
+      font-size: 45px
+      line-height: 50px
+    &__paragraph
+      margin: 0 0 92px
+    &__foto
+      width: 40%
+      top: 100px
+
+@media(max-width: 880px)
+  .typestart
+    &__title
+      padding: 80px 0 0 80px
+    &-container
+      &__foto-way
+        position: relative
+      &__limiter
+        width: 124%
+        height: 200px
+      &__foto-bike
+        width: 220px
+        height: 160px
+  .quote
+    padding: 80px 120px 60px 80px
+    &__info
+      margin-left: 50px
+      &-text
+        font-size: 20px
+        line-height: 30px
+  .road
+    padding: 60px 0 60px 80px
+  .bike
+    padding: 60px 80px
+  .training
+    padding: 98px 80px 60px 80px
+    &__foto
+      width: 42%
+      right: 80px
+  .footer
+    padding: 80px 80px 60px
+
+@media (max-width: 768px)
   .header
     padding: 28px 18px 30px 0
   .menu
@@ -8,3 +121,260 @@
     &-button
       &_visible
         display: flex
+  .typestart
+    display: flex
+    flex-direction: column
+    justify-content: flex-start
+    align-items: center
+    position: static
+    &-container
+      width: 254px
+      height: 348px
+      position: relative
+      left: 0
+      margin-bottom: 77px
+      &__limiter
+        width: 284px
+        height: 200px
+      &__foto-way
+        position: relative
+      &__foto-bike
+        width: 180px
+        height: 138px
+        padding: 10px 26px
+        margin: 0
+    &-info
+      width: 284px
+      padding: 0
+      margin: 0
+      &__link
+        width: 100%
+        height: 46px
+        padding: 0
+        margin: 0
+        &-text
+          padding: 14px 62px 13px
+          font-size: 13px
+          line-height: 19px
+          text-align: center
+      &__system
+        display: none
+  .quote
+    flex-direction: column
+    justify-content: flex-start
+    align-items: center
+    min-height: 513px
+    margin: 0
+    padding: 40px 18px
+    &__foto
+      width: 284px
+      height: 204px
+      margin-bottom: 40px
+    &__info
+      width: 284px
+      margin-left: 0
+      &-text
+        margin-bottom: 40px
+  .road
+    display: flex
+    flex-direction: column
+    justify-content: flex-start
+    align-items: center
+    padding: 40px 18px
+    &__container
+      width: 284px
+    &__wrapper
+      display: flex
+      flex-direction: column-reverse
+      justify-content: flex-start
+      align-items: center
+    &__paragraph
+      width: 284px
+      margin: 0 0 40px 0
+    &__foto
+      width: 284px
+      height: 204px
+      justify-content: flex-start
+    &__img
+      &:first-of-type
+        width: 100%
+      &:last-of-type
+        width: 0
+        display: none
+    &__buttons
+      justify-content: center
+  .bike
+    &__name
+      width: 284px
+      display: flex
+      flex-direction: column
+      justify-content: flex-start
+      align-items: flex-start
+      margin: 0 auto 40px
+      &-title
+        margin: 0 0 40px 0
+      &-items
+        display: none
+    &-selected
+      display: block
+      width: 114px
+      height: 30px
+      background-color: #F4F4F4
+      border: 1px solid #E3E3E3
+      border-radius: 2px
+      font-style: normal
+      font-weight: 600
+      font-size: 11px
+      line-height: 14px
+      color: #151515
+      padding: 0
+      margin: 0
+      &:focus
+        outline: none
+    &__systems
+      justify-content: center
+      margin-bottom: 20px
+    &__system
+      box-sizing: border-box
+      width: 284px
+      height: 306px
+      padding: 15px 15px 37px
+      border-radius: 20px
+      background-color: #f8f8f8
+      filter: drop-shadow(0px 20px 140px rgba(0, 0, 0, 0.06))
+      &-name
+        display: block
+        width: 254px
+        font-size: 14px
+        line-height: 18px
+        text-align: center
+      &-foto
+        width: 254px
+        height: 254px
+        padding: 0
+        margin: 0 0 3px 0
+      &:nth-child(2n + 1)
+        width: 0
+        display: none
+    &-dot
+      display: flex
+      justify-content: space-between
+      margin: 0 auto
+  .training
+    display: flex
+    flex-direction: column
+    align-items: center
+    &__title
+      width: 284px
+      margin: 0 0 40px 0
+    &__foto
+      width: 284px
+      height: 225px
+      position: static
+      margin: 0 0 40px 0
+    &__paragraph
+      width: 284px
+    &__programs
+      width: 284px
+  .footer
+    &__title
+      width: 284px
+    &-form
+      width: 284px
+      margin: 0 0 99px 0
+    &__container
+      &-sun
+        margin: 0 10px 0 0
+      &-btn
+        margin: 0 10px 0 0
+
+@media (max-width: 500px)
+  .header
+    padding: 28px 18px 30px 0
+  .menu
+    &__items
+      &_visible
+        display: none
+    &-button
+      &_visible
+        display: flex
+  .typestart
+    justify-content: flex-start
+    padding: 40px 18px
+    &__title
+      width: 284px
+      font-size: 32px
+      line-height: 40px
+      padding: 0
+    &-container
+      position: relative
+      left: 18px
+      margin-bottom: 77px
+      &__limiter
+        height: 159px
+        bottom: 37px
+      &__foto-bike
+        width: 180px
+        height: 138px
+        padding: 10px 26px
+        margin: 0
+    &-info
+      padding: 0
+      margin: 0
+      &__link
+        padding: 0
+        margin: 0
+  .quote
+    padding: 40px 18px
+    &__diagonal-line
+      @include diagonalLine()
+      margin: 0 0 20px 0
+  .road
+    padding: 40px 18px
+    &__diagonal-line
+      @include diagonalLine()
+      margin: 0 0 40px 0
+    &__title
+      width: 108px
+      font-size: 32px
+      line-height: 40px
+    &__paragraph
+      margin: 0
+    &__buttons-mob
+      display: flex
+    &__buttons
+      display: none
+  .bike
+    padding: 40px 18px
+    &__diagonal-line
+      @include diagonalLine()
+      margin: 0 0 40px 0
+    &__name
+      margin: 0 auto 20px auto
+      &-title
+        width: 284px
+        font-size: 32px
+        line-height: 40px
+        margin: 0 0 20px 0
+    &__systems
+      justify-content: center
+  .training
+    padding: 40px 18px
+    &__diagonal-line
+      @include diagonalLine()
+      margin: 0 0 40px 0
+    &__title
+      font-size: 32px
+      line-height: 40px
+      margin: 0 0 40px 0
+    &__paragraph
+      font-size: 12px
+      line-height: 18px
+      margin: 0 0 40px 0
+  .footer
+    min-height: 358px
+    padding: 40px 18px 25px 18px
+    &__container
+      display: none
+    &__logo
+      display: block
