--- a/sass/blocks/footer/_footer.sass
+++ b/sass/blocks/footer/_footer.sass
@@ -1,10 +1,10 @@
 .footer
   box-sizing: border-box
   width: 100%
-  margin: 0
-  padding: 80px 120px 60px
   min-height: 424px
   background-color: $color-footer-bgc-day
+  margin: 0
+  padding: 80px 120px 60px
   &__title
     padding: 0
     margin: 0 0 50px 0
@@ -14,58 +14,64 @@
     font-size: 24px
     line-height: 32px
     color: $color-title-text-day
-  &__container-input
-    box-sizing: border-box
-    display: flex
+  &-form
     width: 360px
     height: 50px
-    border: 1px solid rgba(199, 199, 199, 0.5)
-    border-radius: 4px
-    cursor: pointer
-    background-color: #EFEFEF
-    padding: 11px 22px 11px 20px
-    margin: 0 0 100px 0
-  &__input
-    box-sizing: border-box
-    width: calc(100% - 16px)
-    height: 100%
-    padding: 0 10px 0 0
-    margin: 0
-    border: none
-    background-color: inherit
-    cursor: pointer
-    &:focus
-      outline: none
-    &::placeholder
-      font-style: normal
-      font-weight: 500
-      font-size: 13px
-      line-height: 28px
-      color: inherit
-  &__button
-    &-submit
-      display: none
-      width: 16px
-      height: 28px
-      border: none
-      background-color: transparent
-      cursor: pointer
-      padding: 0
-      margin: 0
-    &-text
-      font-style: normal
-      font-weight: 500
-      font-size: 13px
-      line-height: 28px
-      text-align: right
-      color: #151515
-  &__wrapper
+    position: relative
     padding: 0
-    margin: 0
+    margin: 0 0 100px 0
+    &__input
+      box-sizing: border-box
+      width: 100%
+      height: 100%
+      border: 1px solid rgba(199, 199, 199, 0.5)
+      border-radius: 4px
+      cursor: pointer
+      background-color: $color-footer-bgc-day
+      padding: 11px 22px 11px 20px
+      margin: 0
+      &-night::placeholder
+        color: $color-title-text-night
+      &::placeholder
+        font-style: normal
+        font-weight: 500
+        font-size: 13px
+        line-height: 28px
+        color: $color-header-text-day
+        opacity: 0.7
+      &:focus
+        outline: none
+        &::placeholder
+          opacity: 1
+      &:hover
+        &::placeholder
+          opacity: 1
+    &__btn
+      &-submit
+        display: none
+        width: 16px
+        height: 28px
+        font-style: normal
+        font-weight: 500
+        font-size: 13px
+        line-height: 28px
+        color: $color-header-text-day
+        border: none
+        background-color: transparent
+        cursor: pointer
+        position: absolute
+        top: 50%
+        transform: translate(0, -50%)
+        right: 22px
+        padding: 0
+        margin: 0
+  &__wrapper
     width: 100%
     display: flex
     justify-content: space-between
     align-items: center
+    padding: 0
+    margin: 0
   &__copyright
     font-style: normal
     font-weight: 600
@@ -77,6 +83,8 @@
   &__container
     display: flex
     align-items: center
+    margin: 0
+    padding: 0
     &-sun
       width: 28px
       height: 28px
@@ -86,8 +94,6 @@
       display: inline-block
       width: 44px
       height: 24px
-      padding: 0
-      margin: 0 22px 0 0
       background-color: $btn-switch-background-day
       border-radius: 17px
       border: none
@@ -95,6 +101,8 @@
       position: relative
       z-index: 0
       transition-duration: 300ms
+      padding: 0
+      margin: 0 22px 0 0
     &-btn::after
       content: ""
       width: 20px
@@ -118,3 +126,7 @@
       object-position: center
       padding: 0
       margin: 0
+  &__logo
+    display: none
+    width: 38px
+    height: 38px
