--- a/sass/blocks/road/_road.sass
+++ b/sass/blocks/road/_road.sass
@@ -3,6 +3,15 @@
   box-sizing: border-box
   padding: 60px 0 60px 120px
   margin: 0 auto
+  &__diagonal-line
+    display: none
+  &__container
+    width: 100%
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 0
+    margin: 0 0 50px 0
   &__title
     width: 460px
     font-style: normal
@@ -13,7 +22,11 @@
     color: $color-header-text-day
     text-align: left
     padding: 0
-    margin: 0 0 50px 0
+    margin: 0
+  &__wrapper
+    width: 100%
+    padding: 0
+    margin: 0
   &__paragraph
     width: 460px
     font-style: normal
@@ -23,6 +36,7 @@
     color: $color-pararaph-text-day
     text-align: left
     opacity: 0.7
+    padding: 0
     margin: 0 0 80px 0
   &__foto
     width: 100%
@@ -32,9 +46,10 @@
     margin: 0 0 67px 0
     position: relative
   &__img
-    display: block
-    width: 650px
-    height: 400px
+    width: calc(50% - 10px)
+    height: auto
+    object-fit: cover
+    object-position: center
   &__sign
     width: 100px
     height: 40px
@@ -44,14 +59,20 @@
     background-image: url('../images/icons/substrate-for-line.png')
     background-repeat: no-repeat
     &-svg
-      margin: 0
       padding: 12px 34px 12px 16px
-    &-svggrevel
       margin: 0
+    &-svggrevel
       padding: 23px 34px 12px 16px
+      margin: 0
+    &-svgtt
+      padding: 28px 34px 12px 16px
+      margin: 0
   &__buttons
+    width: 100%
     display: flex
     justify-content: flex-start
+    &-mob
+      display: none
   &__button
     width: 50px
     height: 50px
@@ -63,8 +84,16 @@
     background-position: center
     border-radius: 50px
     cursor: pointer
+    &-mob
+      width: 24px
+      height: 24px
     &-prev
       background-image: url('../images/icons/arrow-prev.svg')
       margin-right: 20px
+    &-prevmob
+      background-image: url('../images/icons/arrow-prevmob.svg')
+      margin-right: 10px
     &-next
       background-image: url('../images/icons/arrow-next.svg')
+    &-nextmob
+      background-image: url('../images/icons/arrow-nextmob.svg')
