--- a/sass/blocks/traning/_traning.sass
+++ b/sass/blocks/traning/_traning.sass
@@ -2,37 +2,43 @@
   box-sizing: border-box
   width: 100%
   padding: 150px 120px 120px 120px
+  position: relative
   margin: 0 auto
-  display: flex
-  justify-content: space-between
-  align-items: flex-start
-  &__info
-    width: 460px
-    min-height: 460px
+  &__diagonal-line
+    display: none
+  &__title
+    width: 38.34%
+    font-style: normal
+    font-weight: 700
+    font-size: 55px
+    line-height: 60px
+    letter-spacing: -0.5px
+    color: $color-title-text-day
     padding: 0
+    margin: 0 0 50px 0
+  &__foto
+    display: block
+    width: 40.28%
+    height: auto
+    object-fit: cover
+    object-position: center
+    position: absolute
+    top: 150px
+    right: 120px
     margin: 0
-    &-title
-      width: 100%
-      padding: 0
-      margin: 0 0 50px 0
-      font-style: normal
-      font-weight: 700
-      font-size: 55px
-      line-height: 60px
-      letter-spacing: -0.5px
-      color: $color-title-text-day
-    &-paragraph
-      width: 100%
-      padding: 0
-      margin: 0 0 182px 0
-      font-style: normal
-      font-weight: 400
-      font-size: 18px
-      line-height: 28px
-      color: $color-pararaph-text-day
-      opacity: 0.7
+    padding: 0
+  &__paragraph
+    width: 38.34%
+    font-style: normal
+    font-weight: 400
+    font-size: 18px
+    line-height: 28px
+    color: $color-pararaph-text-day
+    opacity: 0.7
+    padding: 0
+    margin: 0 0 182px 0
   &__programs
-    width: 100%
+    width: 38.34%
     display: flex
     justify-content: flex-start
     list-style-type: none
@@ -56,9 +62,3 @@
       opacity: 0.6
   &__program:last-child
     margin: 0
-  &__foto
-    display: block
-    width: 580px
-    height: 460px
-    margin: 0
-    padding: 0
